--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -20,25 +20,25 @@
 					</h3>
 					<br />
 					<ul class="nav nav-pills nav-stacked">
-						<li class="active"><a href="#no1">소고기 덮밥</a></li>
-						<li class="active"><a href="#no2">메밀국수(자루소바)</a></li>
-						<li class="active"><a href="#no3">전복버터구이</a></li>
-						<li class="active"><a href="#no4">달걀찜</a></li>
-						<li class="active"><a href="#no5">도미술찜</a></li>
-						<li class="active"><a href="#no6">해삼초회</a></li>
-						<li class="active"><a href="#no7">도미머리맑은국</a></li>
-						<li class="active"><a href="#no8">도미조림</a></li>
-						<li class="active"><a href="#no9">김초밥</a></li>
-						<li class="active"><a href="#no10">대합맑은국</a></li>
-						<li class="active"><a href="#no11">갑오징어명란무침</a></li>
-						<li class="active"><a href="#no12">야끼우동</a></li>
-						<li class="active"><a href="#no13">소고기간장구이</a></li>
-						<li class="active"><a href="#no14">된장국</a></li>
-						<li class="active"><a href="#no15">생선초밥</a></li>
-						<li class="active"><a href="#no16">달걀말이</a></li>
-						<li class="active"><a href="#no17">참치김초밥</a></li>
-						<li class="active"><a href="#no18">삼치소금구이</a></li>
-						<li class="active"><a href="#no19">문어초회</a></li>
+						<li class="active"><a href="#food_no1">소고기 덮밥</a></li>
+						<li class="active"><a href="#food_no2">메밀국수(자루소바)</a></li>
+						<li class="active"><a href="#food_no3">전복버터구이</a></li>
+						<li class="active"><a href="#food_no4">달걀찜</a></li>
+						<li class="active"><a href="#food_no5">도미술찜</a></li>
+						<li class="active"><a href="#food_no6">해삼초회</a></li>
+						<li class="active"><a href="#food_no7">도미머리맑은국</a></li>
+						<li class="active"><a href="#food_no8">도미조림</a></li>
+						<li class="active"><a href="#food_no9">김초밥</a></li>
+						<li class="active"><a href="#food_no10">대합맑은국</a></li>
+						<li class="active"><a href="#food_no11">갑오징어명란무침</a></li>
+						<li class="active"><a href="#food_no12">야끼우동</a></li>
+						<li class="active"><a href="#food_no13">소고기간장구이</a></li>
+						<li class="active"><a href="#food_no14">된장국</a></li>
+						<li class="active"><a href="#food_no15">생선초밥</a></li>
+						<li class="active"><a href="#food_no16">달걀말이</a></li>
+						<li class="active"><a href="#food_no17">참치김초밥</a></li>
+						<li class="active"><a href="#food_no18">삼치소금구이</a></li>
+						<li class="active"><a href="#food_no19">문어초회</a></li>
 					</ul>
 				</div>
 
@@ -49,8 +49,8 @@
 						<div
 							style="font-family: 'comic sans ms', sans-serif; font-size: 40.0px; font-weight: bolder; color: #112987; text-align: center; height: 70px;">Food
 							blog</div>
-						<section id="no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
-							<br />
+						<section id="food_no1" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
 							<h1 style="text-align: center;">소고기덮밥(30분)</h1>
 							<div id="wrap">
 								<div id="image">
@@ -93,7 +93,7 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no2" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
@@ -143,7 +143,7 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no3" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">전복버터구이(25분)</h1>
 							<div id="wrap">
@@ -180,16 +180,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no4" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no4" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">달걀찜(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200502_163432.jpg" alt="picture 4"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/SCaYHUfW81g"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -225,16 +225,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no5" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no5" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">도미술찜(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_145051.jpg" alt="picture 5"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/UZoBfp89G8U"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -263,16 +263,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no6" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no6" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">해삼초회(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_145054.jpg" alt="picture 6"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/ToOBDQI8eFg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -301,16 +301,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no7" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no7" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">도미머리맑은국(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_173912.jpg" alt="picture 7"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/BrhKehtXrFA"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -338,16 +338,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no8" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no8" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">도미조림(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200509_163756.jpg" alt="picture 8"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/Pkd46M8AuWI"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -375,16 +375,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no9" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">김초밥(25분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_144207.jpg" alt="picture 9"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/kFto3sXBovE"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -411,16 +411,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no10" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">대합맑은국(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_144210.jpg" alt="picture 10"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/uXr3qv9wgU8"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -443,16 +443,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no11" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">갑오징어명란무침(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_162528.jpg" alt="picture 11"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/6EqVGz5_NK0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -475,16 +475,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no12" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">야끼우동(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200516_162530.jpg" alt="picture 12"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/FBtL0BaVpNg"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -510,16 +510,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no13" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no13" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">소고기간장구이(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_143557.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/kS-Cap2p9mw"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -544,16 +544,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no14" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no14" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">된장국(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_151850.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/KTVxZUqyixk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -578,16 +578,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no15" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">생선초밥(40분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200523_172610.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/9xG6Hl4FSpk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -617,16 +617,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no16" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no16" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">달걀말이(25분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_144453.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/wYxwqqSUrQY"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -653,16 +653,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no17" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no17" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">참치김초밥(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_144457.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/IwSp8nJ-gnk"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -688,16 +688,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no18" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no18" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">삼치소금구이(30분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_164014.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/7zZs6GJnORE"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -725,16 +725,16 @@
 							</ol>
 						</section>
 						<hr />
-						<section id="no19" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+						<section id="food_no19" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
 							<br /> <br /> <br />
 							<h1 style="text-align: center;">문어초회(20분)</h1>
 							<div id="wrap">
 								<div id="image">
 									<img src="../images/20200530_164018.jpg" alt="picture 1"
-										width="380" height="220" align="center">
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
-									<iframe width="380" height="220"
+									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/wpQQTapwE_o"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
