--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -54,7 +54,7 @@
 							<h1 style="text-align: center;">소고기덮밥(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200502_143812.jpg" alt="picture 1"
+									<img src="../images/380_20200502_143812.jpg" alt="picture 1"
 										width="380" height="214">
 								</div>
 								<div id="youtube">
@@ -98,7 +98,7 @@
 							<h1 style="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/돈부리_메밀국수.jpg" alt="picture 2" width="380"
+									<img src="../images/380_20200606_144801.jpg" alt="picture 2" width="380"
 										height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -148,7 +148,7 @@
 							<h1 style="text-align: center;">전복버터구이(25분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200502_163430.jpg" alt="picture 3"
+									<img src="../images/380_20200502_163430.jpg" alt="picture 3"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -185,7 +185,7 @@
 							<h1 style="text-align: center;">달걀찜(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200502_163432.jpg" alt="picture 4"
+									<img src="../images/380_20200502_163432.jpg" alt="picture 4"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -230,7 +230,7 @@
 							<h1 style="text-align: center;">도미술찜(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200509_145051.jpg" alt="picture 5"
+									<img src="../images/380_20200509_145051.jpg" alt="picture 5"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -268,7 +268,7 @@
 							<h1 style="text-align: center;">해삼초회(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200509_145054.jpg" alt="picture 6"
+									<img src="../images/380_20200509_145054.jpg" alt="picture 6"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -306,7 +306,7 @@
 							<h1 style="text-align: center;">도미머리맑은국(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200509_173912.jpg" alt="picture 7"
+									<img src="../images/380_20200509_173912.jpg" alt="picture 7"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -343,7 +343,7 @@
 							<h1 style="text-align: center;">도미조림(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200509_163756.jpg" alt="picture 8"
+									<img src="../images/380_20200509_163756.jpg" alt="picture 8"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -380,7 +380,7 @@
 							<h1 style="text-align: center;">김초밥(25분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_144207.jpg" alt="picture 9"
+									<img src="../images/380_20200516_144207.jpg" alt="picture 9"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -416,7 +416,7 @@
 							<h1 style="text-align: center;">대합맑은국(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_144210.jpg" alt="picture 10"
+									<img src="../images/380_20200516_144210.jpg" alt="picture 10"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -448,7 +448,7 @@
 							<h1 style="text-align: center;">갑오징어명란무침(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_162528.jpg" alt="picture 11"
+									<img src="../images/380_20200516_162528.jpg" alt="picture 11"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -480,7 +480,7 @@
 							<h1 style="text-align: center;">야끼우동(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200516_162530.jpg" alt="picture 12"
+									<img src="../images/380_20200516_162530.jpg" alt="picture 12"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -515,7 +515,7 @@
 							<h1 style="text-align: center;">소고기간장구이(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200523_143557.jpg" alt="picture 1"
+									<img src="../images/380_20200523_143557.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -549,7 +549,7 @@
 							<h1 style="text-align: center;">된장국(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200523_151850.jpg" alt="picture 1"
+									<img src="../images/380_20200523_151850.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -583,7 +583,7 @@
 							<h1 style="text-align: center;">생선초밥(40분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200523_172610.jpg" alt="picture 1"
+									<img src="../images/380_20200523_172610.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -622,7 +622,7 @@
 							<h1 style="text-align: center;">달걀말이(25분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200530_144453.jpg" alt="picture 1"
+									<img src="../images/380_20200530_144453.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -658,7 +658,7 @@
 							<h1 style="text-align: center;">참치김초밥(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200530_144457.jpg" alt="picture 1"
+									<img src="../images/380_20200530_144457.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -693,7 +693,7 @@
 							<h1 style="text-align: center;">삼치소금구이(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200530_164014.jpg" alt="picture 1"
+									<img src="../images/380_20200530_164014.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
@@ -730,7 +730,7 @@
 							<h1 style="text-align: center;">문어초회(20분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/20200530_164018.jpg" alt="picture 1"
+									<img src="../images/380_20200530_164018.jpg" alt="picture 1"
 										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
