--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -78,10 +78,8 @@
 						data-placement="top" title="About">About</a></li>
 					<li><a href="/foodblog" data-toggle="tooltip"
 						data-placement="top" title="FoodBlog">FoodBlog</a></li>
-					<li><a href="/koreamap" data-toggle="tooltip"
-						data-placement="top" title="KoreaMap">Korea Map</a></li>
-					<li><a href="#" data-toggle="tooltip"
-						data-placement="top" title="TBD">TBD(Under Construction)</a></li>
+					<li><a href="/worldmap" data-toggle="tooltip"
+						data-placement="top" title="WorldMap">World Map(Under Construction)</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					{{^sessionedUser}}
