--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -27,7 +27,7 @@
 					do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 			</div>
 			<div id="menu1" class="tab-pane fade">
-				<h3>Menu 1</h3>
+				<h3>Korea Map</h3>
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco
 					laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
