--- a/src/main/resources/templates/navigation/worldmap.html
+++ b/src/main/resources/templates/navigation/worldmap.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 {{> include/header}}
-<link rel="stylesheet" href="/css/koreamap.css" type="text/css">
+<link rel="stylesheet" href="/css/map.css" type="text/css">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
 						</p>
 						<p>Converted SVG to JSON & Used random color by JavaScript.</p>
 					</article>
-					<figure id="map_image">
+					<figure id="koreamap_image">
 					</figure>
 				</section>
 			</div>
@@ -122,7 +122,7 @@
 						</p>
 						<p>Converted SVG to JSON & Used random color by JavaScript.</p>
 					</article>
-					<figure id="map_image">
+					<figure id="canadamap_image">
 					</figure>
 				</section>
 			</div>
@@ -134,10 +134,6 @@
 		</div>
 	</div>
 
-
-	<div id="koreamap">
-		<div class="container-fluid"></div>
-	</div>
 	<!-- 이미지로 버튼만들려면 -->
 	<a href="#" class="jcm-top"> <img src="./images/arrow-up.png"
 		style="margin-bottom: 24px; width: 45px;">
