--- a/src/main/resources/templates/include/header.html
+++ b/src/main/resources/templates/include/header.html
@@ -14,8 +14,10 @@
 <script src="/js/jquery-ui.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/scripts.js"></script>
-<script src="/js/koreaMapPathData.js"></script>
 <script src="/js/raphael.js"></script>
+<script src="/js/koreaMapPathData.js"></script>
+<script src="/js/usaMapPathData.js"></script>
+<script src="/js/canadaMapPathData.js"></script>
 <style>
 /* Add a gray background color and some padding to the footer */
 footer {
