--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -66,17 +66,12 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-									만든다.</li>
-								<li>양파, 팽이버섯, 실파 : 각각 4Cm.</li>
-								<li>소고기 : 결반대로 얇게 편썰기 1*5*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
-								<li>김 : 구운후(빳빳하면 안구워도 됨) 가늘게 채(하리노리).</li>
-								<li>달걀 풀어두기.</li>
-								<li>돈부리다시 : 가쓰오다시 1/2C + 간장1T + 맛술1T + 설탕 1t + 소금 약간.</li>
-								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 풀어둔 계란을
-									전체적으로 뿌린다(80%정도까지만 익힘).</li>
-								<li>밥위에 7번에서 완성한 돈부리다시 소스를 올리고 - 김채 올려서 마무리.</li>
+								<li>가쓰오다시.</li>
+								<li>돈부리다시: 가쓰오다시 1/2C+간장1T+맛술1T+설탕1t+소금약간.</li>
+								<li>양파, 팽이버섯, 실파 : 각각 4cm.</li>
+								<li>소고기 : 결반대로 얇게 편썰기 1*3*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
+								<li>김 : 가늘게 채(하리노리) / 달걀 풀어두기.</li>
+								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 계란 80%정도익혀 밥에 올리기 - 김채 올려 마무리.</li>
 								<br />* 맛술(미림)과 청주의 차이: 맛술은 청주에 비해 달고 윤기와 광택을 내어준다.(맛술을 졸이면
 								시럽처럼 된다. 그래서 조림에 많이 쓴다)
 								<br />
