--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -66,7 +66,7 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시.</li>
+								<li>가쓰오다시: 다시물+가쓰오부시.</li>
 								<li>돈부리다시: 가쓰오다시 1/2C+간장1T+맛술1T+설탕1t+소금약간.</li>
 								<li>양파, 팽이버섯, 실파 : 각각 4cm.</li>
 								<li>소고기 : 결반대로 얇게 편썰기 1*3*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
@@ -104,8 +104,7 @@
 							</div>
 
 							<ol>
-								<li>가쓰오다시 1C : 물 1C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서 가쓰오부시를
-									위에 넣어두고 8분간 우린다.(나중에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를 만든다.)</li>
+								<li>가쓰오다시: 다시물+가쓰오부시</li>
 								<li>면삶을 물을 끓여둔다.</li>
 								<li>무 : 껍질을 깐 무를 강판에 갈아서 후지산 모양 만듦.</li>
 								<li>실파 : 송송썰어서 작게 만듦.</li>
