--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -105,24 +105,13 @@
 
 							<ol>
 								<li>가쓰오다시: 다시물+가쓰오부시</li>
-								<li>면삶을 물을 끓여둔다.</li>
-								<li>무 : 껍질을 깐 무를 강판에 갈아서 후지산 모양 만듦.</li>
-								<li>실파 : 송송썰어서 작게 만듦.</li>
-								<li>와사비 : 와사비분말과 물 비중을 3:1로 해서 되직하게 와사비 만들고 나뭇닢 모양으로 칼집을
-									낸다.</li>
-								<li>김 : 구운후 가늘게 채썬다(하리노리). 빳빳하면 굽지 않아도 된다.</li>
-								<li>끓여둔 면삶을 물을 덜어내서 따로 보관한다.</li>
 								<li>소바다시 : 가쓰오다시 1C+간장3T+맛술1T+청주1T+설탕2T 살짝 끓인후 바로 얼음에 물에
 									식힌다.</li>
-								<li>따로 보관한 따듯한 면삶을 물을 이용해서 메밀면(동전 500원 분량)을 심지가없을때까지 삶는다(약
-									3분).-넘치려할때마다 찬물을 조금씩 부어준다.</li>
-								<li>다 익었으면 찬물로 충분히 행구고 얼음물에 직접 넣고 식힘(사리 2개 분량).</li>
-								<li>김발 위에 사리 2개(중지와 검지로 또아리를 틀어서 올려둚) 위에 김채 올리고 + 위에 만든
-									소바다시, 야꾸미 이쁘게 해서 제출.</li>
+								<li>무 : 후지산 모양 / 실파: 송송 / 와사비: 물과동량(나뭇잎모양).</li>
+								<li>메밀면: 심지 없을 때까지 삶아 얼음물에 식힘(사리 2개)</li>
+								<li>김발 위에 사리 2개, 하리노리 - 김채  + 야꾸미, 소바다시 제출.</li>
 								<br />* 뜨거운물 관리를 잘해야 함 면 익힐걸 감안해서 끓인물을 보관하거나 끓일동안 재료손질.
-								<br />
 								<br />* 면과 소바다시를 식힐때 얼음이 필요하므로 얼음관리를 잘 해야 함.
-								<br />
 								<br />* 김발은 본인 김발을 사용하면 안됨. 시험장 제공 김발이나 메뉴판 위에 제출해야 함.
 								<br />
 								<br />
