--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -142,15 +142,13 @@
 							</div>
 
 							<ol>
-								<li>깻잎 : 찬물에 넣어두고 성형 : 다이아몬드 모양.</li>
-								<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 : 전복 껍질의 얇상한 쪽에서 숫가락을 넣어서
-									관자를 자름(잘못하면 내장 터지므로 절대 조심) 내장과 전복분리(분리시 이빨도 제거-내장 안터지게 주의)-> 내장
-									모래주머니 제거(간 모양의 두툼한)-> 전복의 관자쪽 세로로 길게 칼집 내고 가로로 어슷썰기.</li>
-								<li>양파, 피망 : 사방 2Cm 성형(전복 크기와 비슷하게).</li>
+								<li>깻잎: 찬물, 성형.</li>
+								<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 - 이빨제거, 내장 모래주머니 제거(간 모양의 두툼한) 후 데치기
+								  -> 전복의 관자쪽 칼집내고 가로로 어슷썰기.</li>
+								<li>양파, 피망 : 사방 2cm 성형(전복 크기와 비슷하게).</li>
 								<li>은행 끓는 물에 데친후 껍질 제거.</li>
-								<li>후라이팬에 식용유 1t 두르고 양파 볶기 -> 전복, 청주, 은행 -> 피망, 내장, 버터, 소금,
-									후추 넣고 볶기(타지 않게 주의- 타면 많이 감점).</li>
-								<li>접시플레이팅 : 깻잎 10시 방향- 전복버터구이 가운데 담아 마무리.</li>
+								<li>후라이팬 양파, 전복, 청주, 은행, 피망, 내장, 버터, 소금, 후추 넣고 볶기(타지 않게 주의- 타면 많이 감점).</li>
+								<li>접시플레이팅 : 깻잎 10시 방향 - 전복버터구이 가운데 담아 마무리.</li>
 								<br />
 								<br />
 								<h3>요구사항</h3>
