--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -176,15 +176,10 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C : 물 1/2C+다시 넣고 끓으면 다시만 버리고 다시물을 공기에 담아서
-									가쓰오부시를 위에 넣어두고 8분간 우린다 그 후에 면포를 깐 채반위에 부어서 찌꺼기가 없는 맑은 가쓰오다시를
-									만든다.</li>
-								<li>속재료를 데칠 물을 끓여둔다.</li>
-								<li>쑷갓 : 찬물 / 레몬 : 오리발 깍기 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
+								<li>가쓰오다시 1/2C / 쑥갓 : 찬물 / 레몬 : 오리발 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
 								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
-								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장 / 새우 : 사방 1Cm(만일 안
-									깐새우면 아래에서 대친 다음에 껍질 까서 사방 1Cm - 머리따서 내장손으로 제거).</li>
-								<li>끓는물에 채반으로 데치기 : 은행, 죽순, 생선살, 닭가슴살.</li>
+								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장.</li>
+								<li>데치기 : 새우, 생선살, 닭가슴살, 은행, 죽순.</li>
 								<li>달걀물은 반드시 체반에 달걀심을 제거해주고 거기에 가쓰오다시 1/2C+청주 1t+맛술 1t+소금
 									넣어서 섞는다.- Tip: 달걀(1) : 가쓰오다시물(2) 비율.</li>
 								<li>냄비에 중탕으로 달걀찜 (냄비에 행주를 깔고 물을 넣은 후 위에 접시를 넣고 꾹꾹 눌러서 넘치지
