--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -178,18 +178,13 @@
 							<ol>
 								<li>가쓰오다시 1/2C / 쑥갓 : 찬물 / 레몬 : 오리발 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
 								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
-								<li>생선 : 사방 1Cm-소금 / 닭가슴살 : 사방 1Cm-간장.</li>
+								<li>생선 : 사방 1cm-소금 / 닭가슴살 : 사방 1cm-간장.</li>
 								<li>데치기 : 새우, 생선살, 닭가슴살, 은행, 죽순.</li>
-								<li>달걀물은 반드시 체반에 달걀심을 제거해주고 거기에 가쓰오다시 1/2C+청주 1t+맛술 1t+소금
-									넣어서 섞는다.- Tip: 달걀(1) : 가쓰오다시물(2) 비율.</li>
-								<li>냄비에 중탕으로 달걀찜 (냄비에 행주를 깔고 물을 넣은 후 위에 접시를 넣고 꾹꾹 눌러서 넘치지
-									않을정도로 물을 넣는다-그 위에 공기에 담은 재료들과 달걀물을 넣어서 8분정도 익힌다 (*공기 기포가 생기지
-									않도록 채반에 달걀물을 걸러서 곱게 내린 달걀물을 넣는다)-접시를 면포로 감싸서 올려두는게 중간게 계란 시간
-									체크하기 좋다.</li>
-								<li>푸딩처럼 익었으면 표고 버섯을 올리고 뜸들인다. 그후에 제출할때 오리발과 쑥갓을 올려서 제출한다.</li>
+								<li>새우:껍질벗기고 고명 / 은행:껍질 벗기고 고명</li>									
+								<li>달걀물: 달걀1개, 가쓰오다시1/2C+청주1t+맛술1t+소금 - 체</li>
+								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 오리발, 쑥갓, 찜어묵 올려서 제출한다 제출한다.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
-								<br />
-								<br />* 중간에 찌기 전에 기포가 없도록 달걀심을 없애고 기포도 없애서 쪄야 함.
+								<br />* 접시와 면포로 감싸야 수시로 확인 가능
 								<br />
 								<br />
 								<h3>요구사항</h3>
