--- a/src/main/resources/templates/navigation/foodblog.html
+++ b/src/main/resources/templates/navigation/foodblog.html
@@ -39,6 +39,7 @@
 						<li class="active"><a href="#food_no17">참치김초밥</a></li>
 						<li class="active"><a href="#food_no18">삼치소금구이</a></li>
 						<li class="active"><a href="#food_no19">문어초회</a></li>
+						<li class="active"><a href="#food_no20">준비&재료손질</a></li>
 					</ul>
 				</div>
 
@@ -71,7 +72,8 @@
 								<li>양파, 팽이버섯, 실파 : 각각 4cm.</li>
 								<li>소고기 : 결반대로 얇게 편썰기 1*3*0.2cm. - Tip: 편썰고 길이를 끝 잘라서 맞추기.</li>
 								<li>김 : 가늘게 채(하리노리) / 달걀 풀어두기.</li>
-								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 계란 80%정도익혀 밥에 올리기 - 김채 올려 마무리.</li>
+								<li>오믈렛 프라이팬에 돈부리다시 넣고 - 끓으면 고기 -> 양파, 팽이 -> 실파 -> 계란
+									80%정도익혀 밥에 올리기 - 김채 올려 마무리.</li>
 								<br />* 맛술(미림)과 청주의 차이: 맛술은 청주에 비해 달고 윤기와 광택을 내어준다.(맛술을 졸이면
 								시럽처럼 된다. 그래서 조림에 많이 쓴다)
 								<br />* 계란은 반숙이 되도록 해야 함.
@@ -91,8 +93,8 @@
 							<h1 style="text-align: center;">메밀국수(자루소바)(30분)</h1>
 							<div id="wrap">
 								<div id="image">
-									<img src="../images/380_20200606_144801.jpg" alt="picture 2" width="380"
-										height="214" align="center">
+									<img src="../images/380_20200606_144801.jpg" alt="picture 2"
+										width="380" height="214" align="center">
 								</div>
 								<div id="youtube">
 									<iframe width="380" height="214"
@@ -109,7 +111,7 @@
 									식힌다.</li>
 								<li>무 : 후지산 모양 / 실파: 송송 / 와사비: 물과동량(나뭇잎모양).</li>
 								<li>메밀면: 심지 없을 때까지 삶아 얼음물에 식힘(사리 2개)</li>
-								<li>김발 위에 사리 2개, 하리노리 - 김채  + 야꾸미, 소바다시 제출.</li>
+								<li>김발 위에 사리 2개, 하리노리 - 김채 + 야꾸미, 소바다시 제출.</li>
 								<br />* 뜨거운물 관리를 잘해야 함 면 익힐걸 감안해서 끓인물을 보관하거나 끓일동안 재료손질.
 								<br />* 면과 소바다시를 식힐때 얼음이 필요하므로 얼음관리를 잘 해야 함.
 								<br />* 김발은 본인 김발을 사용하면 안됨. 시험장 제공 김발이나 메뉴판 위에 제출해야 함.
@@ -143,11 +145,12 @@
 
 							<ol>
 								<li>깻잎: 찬물, 성형.</li>
-								<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 - 이빨제거, 내장 모래주머니 제거(간 모양의 두툼한) 후 데치기
-								  -> 전복의 관자쪽 칼집내고 가로로 어슷썰기.</li>
+								<li>전복 : 소금으로 문질러서 씻은 후 껍질과 내장 분리 - 이빨제거, 내장 모래주머니 제거(간 모양의
+									두툼한) 후 데치기 -> 전복의 관자쪽 칼집내고 가로로 어슷썰기.</li>
 								<li>양파, 피망 : 사방 2cm 성형(전복 크기와 비슷하게).</li>
 								<li>은행 끓는 물에 데친후 껍질 제거.</li>
-								<li>후라이팬 양파, 전복, 청주, 은행, 피망, 내장, 버터, 소금, 후추 넣고 볶기(타지 않게 주의- 타면 많이 감점).</li>
+								<li>후라이팬 양파, 전복, 청주, 은행, 피망, 내장, 버터, 소금, 후추 넣고 볶기(타지 않게 주의-
+									타면 많이 감점).</li>
 								<li>접시플레이팅 : 깻잎 10시 방향 - 전복버터구이 가운데 담아 마무리.</li>
 								<br />
 								<br />
@@ -176,13 +179,15 @@
 								</div>
 							</div>
 							<ol>
-								<li>가쓰오다시 1/2C / 쑥갓 : 찬물 / 레몬 : 오리발 / 표고 별모양 내기 / 은행 끓는 물에 데쳐서 까두기.</li>
+								<li>가쓰오다시 1/2C / 쑥갓 : 찬물 / 레몬 : 오리발 / 표고 별모양 내기 / 은행 끓는 물에
+									데쳐서 까두기.</li>
 								<li>죽순, 찜어묵, 밤(직화로 꼬치에 넣어 굽기) : 사방 1Cm.</li>
 								<li>생선 : 사방 1cm-소금 / 닭가슴살 : 사방 1cm-간장.</li>
 								<li>데치기 : 새우, 생선살, 닭가슴살, 은행, 죽순.</li>
-								<li>새우:껍질벗기고 고명 / 은행:껍질 벗기고 고명</li>									
+								<li>새우:껍질벗기고 고명 / 은행:껍질 벗기고 고명</li>
 								<li>달걀물: 달걀1개, 가쓰오다시1/2C+청주1t+맛술1t+소금 - 체</li>
-								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 오리발, 쑥갓, 찜어묵 올려서 제출한다 제출한다.</li>
+								<li>냄비에 중탕으로 달걀찜 (재료 다 넣기) 14분 정도 찐 후에 새우, 오리발, 쑥갓, 찜어묵 올려서
+									제출한다 제출한다.</li>
 								<br />* 달걀찜은 부드럽게 익혀서 제출해야함.
 								<br />* 접시와 면포로 감싸야 수시로 확인 가능
 								<br />
@@ -211,7 +216,7 @@
 								</div>
 							</div>
 							<ol>
-								<li>다시물 1/2C, 쑥갓: 찬물.</li>
+								<li>다시물 / 쑥갓: 찬물.</li>
 								<li>도미: 비늘, 지느러미, 아가미, 내장 제거 - 꼬리 V자 성형, 몸통 세장뜨기, 머리 2등분 -
 									소금 - 생선 데치기.</li>
 								<li>무: 은행잎&야꾸미 / 당근: 매화 / 죽순:빗살 편 / 배추&쑥갓말이 / 표고: 별모양 / 두부:
@@ -705,6 +710,42 @@
 								<div id="youtube">
 									<iframe width="380" height="214"
 										src="https://www.youtube.com/embed/wpQQTapwE_o"
+										frameborder="0"
+										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+										allowfullscreen></iframe>
+								</div>
+							</div>
+							<ol>
+								<li>가쓰오다시 1/2C - 도사스 : 가쓰오다시 2T, 간장 1T, 설탕 1T, 식초 1T - 살짝
+									끓여 식히기.</li>
+								<li>오이: 자바라 - 소금물 - 2~3cm로 썰기.</li>
+								<li>미역: 찬물에 불린 후 데치기 - 참물에 헹군 후 김발에 말기 - 4~5cm로 썰기.</li>
+								<li>문어: 간장 & 식초 물에 데침 - 물결 모양.</li>
+								<li>레몬: 반달모양 슬라이스.</li>
+								<li>완성접시에 오이, 미영, 문어, 레몬 답고 도사스 뿌려 마무리.</li>
+								<br />* 시간 없음
+								<br />
+								<br />
+								<h3>요구사항</h3>
+								<br />가. 가다랑어국물을 만들어 양념초간장(도사스)을 만드시오.
+								<br />나. 문어는 삶아 4~5cm 길이로 물결모양썰기(하조기리)를 하시오.
+								<br />다. 미역은 손질하여 4~5cm 정도 크기로 사용하시오.
+								<br />라. 오이는 둥글게 썰거나 줄무늬(자바라) 썰기 하여 사용하시오.
+								<br />마. 문어초회 접시에 오이와 문어를 담고 양념초간장(도사스)을 끼얹어 레몬으로 장식하시오.
+							</ol>
+						</section>
+						<hr />
+						<section id="food_no20" style="color: #4b66b3;"font-family: 'comicsansms', sans-serif; font-size: 25.0px; line-height: 30.0px;">
+							<br /> <br /> <br />
+							<h1 style="text-align: center;">준비&재료손질</h1>
+							<div id="wrap">
+								<div id="image">
+									<img src="../images/380_20200530_164018.jpg" alt="picture 1"
+										width="380" height="214" align="center">
+								</div>
+								<div id="youtube">
+									<iframe width="380" height="213"
+										src="https://www.youtube.com/embed/Z8v9ZolM4G0"
 										frameborder="0"
 										allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 										allowfullscreen></iframe>
